<resources>
    <string name="app_name">Orange News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="website">www.orange.mg</string>
    <string name="actualites">Actualités</string>
    <string name="societe">Société</string>
    <string name="economie">Economie</string>
    <string name="culture">Culture</string>
    <string name="sport">Sport</string>
    <string name="politique">Politique</string>
    <string name="dossier">Dossier</string>
    <string name="interview">Interview</string>
    <string name="enimage">En image</string>
    <string name="lupourvous">Lu pour vous</string>
    <string name="title_actualite_list">Actualites</string>
    <string name="title_actualite_detail">Actualite Detail</string>
    <string name="title_activity_settings">Paramètres</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Activer les recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations basées sur votre historique
    </string>

    <string name="pref_title_display_name">Nom d\'utilisateur</string>
    <string name="pref_default_display_name">Mariot Tsitoara</string>

    <string name="pref_title_add_friends_to_messages">Ajouter des amis</string>
    <string-array name="pref_example_list_titles">
        <item>Toujours</item>
        <item>Quand possible</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Données &amp; sync</string>

    <string name="pref_title_sync_frequency">Frequence</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
        <item>3 heures</item>
        <item>6 heures</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Paramètre de sync système</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Notifications nouveau messages</string>

    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent">Silencieux</string>

    <string name="pref_title_vibrate">Vibreur</string>
    <string name="action_actualiser">Actualiser</string>
</resources>
